--- a/client/index.html
+++ b/client/index.html
@@ -60,5 +60,13 @@
     </table>
     
 </body>
-<script src="js/index.js"></script>
+<script src="js/app/models/Negociacao.js"></script>
+<script>
+    var n1 = new Negociacao(new Date(), 5, 700);
+
+    console.log(n1.data)
+    n1.data.setDate(11);
+    console.log(n1.data);
+    
+</script>
 </html>
