Aula 02.8 - Programação defensiva

--- a/client/index.html
+++ b/client/index.html
@@ -62,10 +62,15 @@
 </body>
 <script src="js/app/models/Negociacao.js"></script>
 <script>
-    var n1 = new Negociacao(new Date(), 5, 700);
+
+    var hoje = new Date();
+
+    var n1 = new Negociacao(hoje, 5, 700);
 
     console.log(n1.data)
-    n1.data.setDate(11);
+
+    hoje.setDate(hoje);
+
     console.log(n1.data);
     
 </script>
