--- a/client/index.html
+++ b/client/index.html
@@ -44,8 +44,9 @@
 
     <div id="negociacoesView"></div>
     
-    <script src="js/app/models/Negociacao.js"></script>
     <script src="js/app/models/ListaNegociacoes.js"></script>
+    <script src="js/app/models/Mensagem.js"></script>
+    <script src="js/app/models/Negociacao.js"></script>
     <script src="js/app/controllers/NegociacaoController.js"></script>
     <script src="js/app/helpers/DateHelper.js"></script>
     <script src="js/app/views/NegociacoesView.js"></script>
