--- a/client/index.html
+++ b/client/index.html
@@ -51,8 +51,10 @@
     <script src="js/app/models/Negociacao.js"></script>
     <script src="js/app/controllers/NegociacaoController.js"></script>
     <script src="js/app/helpers/DateHelper.js"></script>
+    <script src="js/app/views/View.js"></script>
     <script src="js/app/views/MensagemView.js"></script>
     <script src="js/app/views/NegociacoesView.js"></script>
+    
     <script>
         let negociacaoController = new NegociacaoController();
     </script>
